--- a/BooksStore.Blazor.Components/BooksStore.Blazor.Components.csproj
+++ b/BooksStore.Blazor.Components/BooksStore.Blazor.Components.csproj
@@ -1,26 +1,34 @@
 <Project Sdk="Microsoft.NET.Sdk.Razor">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+		<Nullable>enable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
+	</PropertyGroup>
+
+	<ItemGroup>
+		<BlazorWebAssemblyLazyLoad Include="BooksStore.Blazor.Components.dll" />
+	</ItemGroup>
 
 
-  <ItemGroup>
-    <SupportedPlatform Include="browser" />
-  </ItemGroup>
+	<ItemGroup>
+		<SupportedPlatform Include="browser" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.19" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.19" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <UpToDateCheckInput Remove="InputTime.razor" />
-  </ItemGroup>
+	<ItemGroup>
+		<UpToDateCheckInput Remove="InputTime.razor" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <_ContentIncludedByDefault Remove="InputTime.razor" />
-  </ItemGroup>
+	<ItemGroup>
+		<_ContentIncludedByDefault Remove="InputTime.razor" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Content Include="ExampleJsInterop.cs" />
+	</ItemGroup>
 
 </Project>
